--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.7.2
 coverage==7.2.7
 Django==3.2.20
 django-allauth==0.41.0
+freezegun==1.2.2
 oauthlib==3.2.2
+Pillow==10.0.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
