--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.7.2
 coverage==7.2.7
+dj-database-url==0.5.0
 Django==3.2.20
 django-allauth==0.41.0
 django-countries==7.5.1
 django-widget-tweaks==1.5.0
 freezegun==1.2.2
+gunicorn==21.2.0
 oauthlib==3.2.2
 Pillow==10.0.0
+psycopg2==2.9.7
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
