--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 asgiref==3.7.2
+boto3==1.28.49
+botocore==1.31.49
 coverage==7.2.7
 dj-database-url==0.5.0
 Django==3.2.20
 django-allauth==0.41.0
 django-countries==7.5.1
+django-storages==1.14
 django-widget-tweaks==1.5.0
 freezegun==1.2.2
 gunicorn==21.2.0
+jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==10.0.0
 psycopg2==2.9.7
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
+s3transfer==0.6.2
 sqlparse==0.4.4
 stripe==6.4.0
+urllib3==1.26.16
