Styles: code format and spell check & tidy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,20 @@
    "files.autoSave": "off",
    "workbench.colorTheme": "Visual Studio Dark",
    "terminal.integrated.gpuAcceleration": "canvas",
-   "editor.defaultFormatter": "HookyQR.beautify"
+   "editor.defaultFormatter": "HookyQR.beautify",
+   "cSpell.words": [
+      "Afif",
+      "allauth",
+      "arctictern",
+      "csrfmiddlewaretoken",
+      "endfor",
+      "floatformat",
+      "freezegun",
+      "Hewson",
+      "lineitem",
+      "lineitems",
+      "postloadjs",
+      "scrollpos",
+      "Temani"
+   ]
 }
