feat: add review approval functionality, update rating calc & review views

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,9 @@
       "Afif",
       "allauth",
       "arctictern",
+      "ccircle",
       "csrfmiddlewaretoken",
+      "csvg",
       "endfor",
       "floatformat",
       "freezegun",
